# crypto-data-aggregator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: ingest.toml  symbols.toml  venues.toml
cryptodata/: __init__.py  paths.py
cryptodata/core/: aggregate.py  consolidated.py  corrections.py  health.py  health_writer.py  ingest.py  ratelimit.py  reconciler.py  resample.py  symbols.py  worker.py  writer.py
cryptodata/obs/: __init__.py  metrics.py  status.py
cryptodata/quality/: __init__.py  checks.py  report.py
cryptodata/query/: bars.py  books.py  funding.py  meta.py  quotes.py  ref.py  trades.py
cryptodata/sources/: base.py  binance.py  binance_futures.py  bitfinex.py  bitstamp.py  bybit.py  coinbase.py  gemini.py  kraken.py  okx.py  registry.py
cryptodata/storage/: compact.py  duckdb_views.py  parquet.py  schemas.py
data/meta/: benchmarks.json  coverage.json  coverage.md  dataset_manifest.json  quality_summary.json
data/meta/quality/: 2026-05-12.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  DATA_DICTIONARY.md  METHODOLOGY.md  OPERATIONS.md  SLA.md
docs/grafana/: cryptodata-overview.json
notebooks/: 01_venue_comparison.ipynb  02_consolidated_tape_anatomy.ipynb
scripts/: backfill.py  bench.py  build_bars_1s.py  build_dataset.py  compact.py  coverage_report.py  run_ingest.py  smoke_test.py  status.py  validate.py
tests/: conftest.py  test_aggregate.py  test_asof_query.py  test_books.py  test_consolidated.py  test_corrections.py  test_endtoend_aggregation.py  test_quality.py  test_ratelimit.py  test_resample.py  test_sources_parse.py  test_storage_roundtrip.py  test_symbols.py
tests/fixtures/: ws_trade_frames.json
